[package]
name = "debber"
version = "1.0.0"
description = "Debian archive reader / extractor: Refreshed"
repository = "https://github.com/Strawberry-Foundations/debber"
license = "MIT"
authors = ["Matteo <me@matteodev.xyz>"]
readme = "README.md"
keywords = ["debian", "archive", "apt"]
categories = ["os::unix-apis"]
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
ar = "0.9.0"
tar = "0.4.41"
xz2 = "0.1.7"
libflate = "2.1.0"
zstd = "0.13.2"
